apps/whoami/030-ingress.yaml
# IngresRoute http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - cloud.tnils.eu
    secretName: tls-whoami
  rules:
  - host: cloud.tnils.eu
    http:
      paths:
      - path: /whoami
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
