apps/whoami/030-network.yaml
# # Issuer
# ---
# apiVersion: cert-manager.io/v1
# kind: Issuer
# metadata:
#  name: whoami-issuer
#  namespace: whoami
# spec:
#  acme:
#     email: info@tnils.eu
#     # We use the staging server here for testing to avoid hitting
#     server: https://acme-v02.api.letsencrypt.org/directory
#     privateKeySecretRef:
#       # if not existing, it will register a new account and stores it
#       name: whoami-issuer-account-key
#     solvers:
#       - http01:
#           # The ingressClass used to create the necessary ingress routes
#           ingress:
#             class: traefik

# IngresRoute http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami
  namespace: whoami
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # cert-manager.io/issuer: "whoami-issuer"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cloud.tnils.eu
      secretName: tls-whoami-ingress-http
  rules:
    - host: cloud.tnils.eu
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
